chore: modernize to Paper 1.21, Java 21, add tests and internal docs
- Migrate from Spigot API to Paper API 1.21, Java 21
- Migrate CrucialAPI 2.1.7 → CrucialLib 3.0.0 (package rename + API updates)
- Fix deprecated APIs: PotionEffectType.HASTE, URI.create().toURL()
- Add lazy plugin initialization for testability
- Add 184 unit tests (JUnit 5 + MockBukkit 4.x)
- Add CI workflow (.github/workflows/ci.yml)
- Update existing maven.yml to Java 21 + actions v4
- Add CLAUDE.md, ARCHITECTURE.md, CONTRIBUTING.md, RUNBOOK.md
- Add DECISIONS/ with ADR-001 (Spigot 1.21 update) and ADR-002 (unit tests)

https://claude.ai/code/session_01EyodQnKSvWcNzA6W8pCmyu