@@ -1,7 +1,7 @@
 package de.chafficplugins.mininglevels.utils;
 
 import de.chafficplugins.mininglevels.MiningLevels;
-import io.github.chafficui.CrucialAPI.Utils.Server;
+import io.github.chafficui.CrucialLib.Utils.Server;
 import org.bukkit.Bukkit;
 import org.bukkit.ChatColor;
 import org.bukkit.plugin.InvalidDescriptionException;
@@ -11,60 +11,64 @@ import org.bukkit.plugin.Plugin;
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
 import java.nio.channels.Channels;
 import java.nio.channels.ReadableByteChannel;
 
-import static de.chafficplugins.mininglevels.utils.ConfigStrings.CRUCIAL_API_VERSION;
+import static de.chafficplugins.mininglevels.utils.ConfigStrings.CRUCIAL_LIB_VERSION;
 
 public class Crucial {
-    private static final MiningLevels plugin = MiningLevels.getPlugin(MiningLevels.class);
+    private static MiningLevels pluginInstance;
+    private static MiningLevels plugin() {
+        if (pluginInstance == null) pluginInstance = MiningLevels.getPlugin(MiningLevels.class);
+        return pluginInstance;
+    }
     private static boolean isConnected = false;
 
     public static void init() {
-        Plugin crucialAPI = plugin.getServer().getPluginManager().getPlugin("CrucialAPI");
-        if (crucialAPI == null) {
+        Plugin crucialLib = plugin().getServer().getPluginManager().getPlugin("CrucialLib");
+        if (crucialLib == null) {
             try {
                 download();
             } catch (IOException e) {
-                plugin.error("Error 24: Failed to download CrucialAPI");
-                plugin.log("Please download it from: https://www.spigotmc.org/resources/crucialapi.86380/");
-                Bukkit.getPluginManager().disablePlugin(plugin);
-            } catch (InvalidDescriptionException | org.bukkit.plugin.InvalidPluginException e) {
-                plugin.error("Error 25: Failed to load CrucialAPI.");
-                Bukkit.getPluginManager().disablePlugin(plugin);
+                plugin().error("Error 24: Failed to download CrucialLib");
+                plugin().log("Please download it from: https://github.com/ChafficPlugins/CrucialLib/releases");
+                Bukkit.getPluginManager().disablePlugin(plugin());
+            } catch (InvalidDescriptionException | InvalidPluginException e) {
+                plugin().error("Error 25: Failed to load CrucialLib.");
+                Bukkit.getPluginManager().disablePlugin(plugin());
             }
-        } else if (!checkVersion(crucialAPI)) {
-            plugin.error("Error 26: Wrong version of CrucialAPI.");
-            plugin.getServer().getPluginManager().disablePlugin(crucialAPI);
+        } else if (!checkVersion(crucialLib)) {
+            plugin().error("Error 26: Wrong version of CrucialLib.");
+            plugin().getServer().getPluginManager().disablePlugin(crucialLib);
             try {
                 download();
             } catch (IOException e) {
-                plugin.error("Error 24: Failed to download CrucialAPI");
-                plugin.log("Please download it from: https://www.spigotmc.org/resources/crucialapi.86380/");
-                Bukkit.getPluginManager().disablePlugin(plugin);
+                plugin().error("Error 24: Failed to download CrucialLib");
+                plugin().log("Please download it from: https://github.com/ChafficPlugins/CrucialLib/releases");
+                Bukkit.getPluginManager().disablePlugin(plugin());
             } catch (InvalidPluginException | InvalidDescriptionException e) {
-                plugin.error("Error 25: Failed to load CrucialAPI.");
-                Bukkit.getPluginManager().disablePlugin(plugin);
+                plugin().error("Error 25: Failed to load CrucialLib.");
+                Bukkit.getPluginManager().disablePlugin(plugin());
             }
         }
     }
 
     private static void download() throws IOException, InvalidPluginException, InvalidDescriptionException {
-        plugin.log("Downloading CrucialAPI");
-        URL website = new URL("https://github.com/Chafficui/CrucialAPI/releases/download/v" + CRUCIAL_API_VERSION + "/CrucialAPI-v" + CRUCIAL_API_VERSION + ".jar");
+        plugin().log("Downloading CrucialLib");
+        java.net.URL website = URI.create("https://github.com/ChafficPlugins/CrucialLib/releases/download/v" + CRUCIAL_LIB_VERSION + "/CrucialLib-v" + CRUCIAL_LIB_VERSION + ".jar").toURL();
         ReadableByteChannel rbc = Channels.newChannel(website.openStream());
-        FileOutputStream fos = new FileOutputStream("plugins/CrucialAPI.jar");
+        FileOutputStream fos = new FileOutputStream("plugins/CrucialLib.jar");
         fos.getChannel().transferFrom(rbc, 0L, Long.MAX_VALUE);
-        plugin.log(ChatColor.GREEN + "Downloaded successfully.");
-        Bukkit.getPluginManager().loadPlugin(new File("plugins/CrucialAPI.jar"));
+        plugin().log(ChatColor.GREEN + "Downloaded successfully.");
+        Bukkit.getPluginManager().loadPlugin(new File("plugins/CrucialLib.jar"));
     }
 
-    private static boolean checkVersion(Plugin crucialAPI) {
-        String version = crucialAPI.getDescription().getVersion();
-        if(version.equals(CRUCIAL_API_VERSION)) return true;
+    private static boolean checkVersion(Plugin crucialLib) {
+        String version = crucialLib.getDescription().getVersion();
+        if(version.equals(CRUCIAL_LIB_VERSION)) return true;
         String[] subVersions = version.split("\\.");
-        String[] subVersions2 = CRUCIAL_API_VERSION.split("\\.");
+        String[] subVersions2 = CRUCIAL_LIB_VERSION.split("\\.");
         if(subVersions[0].equals(subVersions2[0]) && subVersions[1].equals(subVersions2[1])) {
             return Integer.parseInt(subVersions[2]) >= Integer.parseInt(subVersions2[2]);
         }
@@ -72,21 +76,21 @@ public class Crucial {
     }
 
     public static boolean connect() throws IOException {
-        org.bukkit.plugin.Plugin crucialAPI = plugin.getServer().getPluginManager().getPlugin("CrucialAPI");
-        if (crucialAPI != null) {
-            if (!crucialAPI.isEnabled()) {
-                Bukkit.getPluginManager().enablePlugin(crucialAPI);
+        Plugin crucialLib = plugin().getServer().getPluginManager().getPlugin("CrucialLib");
+        if (crucialLib != null) {
+            if (!crucialLib.isEnabled()) {
+                Bukkit.getPluginManager().enablePlugin(crucialLib);
             }
-            plugin.log(ChatColor.GREEN + "Successfully connected to CrucialAPI.");
+            plugin().log(ChatColor.GREEN + "Successfully connected to CrucialLib.");
             isConnected = true;
-            if (!crucialAPI.getDescription().getVersion().startsWith(CRUCIAL_API_VERSION.substring(0,3))) {
-                plugin.error("Error 24: Please update to CrucialAPI " + CRUCIAL_API_VERSION);
-                plugin.log("Please download it from: https://www.spigotmc.org/resources/crucialapi.86380/");
+            if (!crucialLib.getDescription().getVersion().startsWith(CRUCIAL_LIB_VERSION.substring(0,3))) {
+                plugin().error("Error 24: Please update to CrucialLib " + CRUCIAL_LIB_VERSION);
+                plugin().log("Please download it from: https://github.com/ChafficPlugins/CrucialLib/releases");
                 return false;
             }
             return true;
         }
-        plugin.error("Error 26: Failed to connect to CrucialAPI.");
+        plugin().error("Error 26: Failed to connect to CrucialLib.");
         return false;
     }
 
